# nmai

./: .gitignore  README.md  SUBMISSION.md  pyproject.toml
configs/: dataset_paths.example.yaml
configs/experiments/: yolo_baseline.yaml
scripts/: run_submission_baseline.sh  verify_submission_repo.sh
src/nmai/: audit.py  catalog.py  cli.py  coco_utils.py  config.py  eval_coco.py  experiment_suite.py  fold_pipeline.py  splits.py  tiled_inference.py  train_yolo.py  yolo_export.py
